<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_live_map">

    <fragment
        android:id="@+id/navigation_live_map"
        android:name="com.vlcnavigation.ui.livemap.LiveMapFragment"
        android:label="@string/title_live_map"
        tools:layout="@layout/fragment_live_map" />

    <fragment
        android:id="@+id/navigation_fft"
        android:name="com.vlcnavigation.ui.fft.FFTFragment"
        android:label="@string/title_fft"
        tools:layout="@layout/fragment_fft" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.vlcnavigation.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>