<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorOnPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintHorizontal_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtInputLayout_addLight_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/light_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtInputLayout_addLight_xPos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtInputLayout_addLight_lambda">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_addLight_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtInputLayout_addLight_lambda"
            app:layout_constraintHorizontal_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/light_lambda"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintTop_toTopOf="@id/txtInputLayout_addLight_description"
            app:layout_constraintBottom_toTopOf="@id/txtInputLayout_addLight_yPos"
            app:layout_constraintStart_toEndOf="@id/txtInputLayout_addLight_description"
            app:layout_constraintEnd_toStartOf="@id/fab_addLight">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_addLight_lambda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtInputLayout_addLight_xPos"
            app:layout_constraintHorizontal_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/light_posX"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayout_addLight_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtInputLayout_addLight_yPos">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_addLight_xPos"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayout_addLight_yPos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintHorizontal_weight="1"
            android:hint="@string/light_posY"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayout_addLight_lambda"
            app:layout_constraintBottom_toBottomOf="@id/txtInputLayout_addLight_xPos"
            app:layout_constraintStart_toEndOf="@id/txtInputLayout_addLight_xPos"
            app:layout_constraintEnd_toStartOf="@id/txtInputLayout_addLight_floor">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_addLight_yPos"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayout_addLight_floor"
            android:layout_width="56dp"
            android:layout_height="56dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/light_floor"
            app:layout_constraintTop_toBottomOf="@id/fab_addLight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_addLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtInputLayout_addLight_floor"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_circle_outline_24"
            android:backgroundTint="@color/green"
            app:borderWidth="0dp"
            app:maxImageSize="56dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>