<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorOnPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayout_addFloor_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/floor_order"
            app:layout_constraintHorizontal_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginBottom="@dimen/default_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtInputLayout_addFloor_resourcePath"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtInputLayout_addFloor_floor">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberSigned"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayout_addFloor_floor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/floor_description"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtInputLayout_addFloor_resourcePath"
            app:layout_constraintStart_toEndOf="@id/txtInputLayout_addFloor_order"
            app:layout_constraintEnd_toStartOf="@id/fab_addFloor">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayout_addFloor_resourcePath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/floor_path"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintHorizontal_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayout_addFloor_floor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fab_addFloor">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_addFloor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintHorizontal_weight="1"
            app:srcCompat="@drawable/ic_baseline_add_circle_outline_24"
            android:backgroundTint="@color/green"
            app:borderWidth="0dp"
            app:maxImageSize="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtInputLayout_addFloor_floor" />



</androidx.constraintlayout.widget.ConstraintLayout>